# auth0-frontend

./: Cargo.toml  README.md  flake.nix
src/: config.rs  errors.rs  helpers.rs  main.rs  state.rs  templates.rs
src/routes/: applications.rs  connections.rs  logs.rs  mod.rs  root.rs  users.rs
templates/: base.html  index.html  toast.html
templates/applications/: list.html  table.html
templates/connections/: list.html  table.html
templates/logs/: list.html  table.html
templates/users/: create_form.html  detail.html  list.html  logs.html  table.html
