[package]
name = "auth0-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
auth0-mgmt-api = { git = "https://github.com/iainh/auth0-mgmt-api" }
htmx-form-errors = { path = "../htmx-form-errors" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
